--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   shimmer: ^3.0.0
   provider: ^6.1.1
   badges: ^3.1.2
+  url_launcher: ^6.2.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
